# HitsBE

./: .gitignore  Dockerfile  README.md  info.txt  my_snapshot.pickle  pyproject.toml
.github/workflow/: main.yml
experiments/: hitsbert_example.py  splines_experiment.py
experiments/comparison/1nn_euclidean/: hib.py  raw.py
experiments/comparison/5fold_cv/: cross_validation.py  folds.json
experiments/comparison/random_forest/: hib.py  tsf.py
experiments/data/: class_dist.py  datasets_hb_base.py  datasets_hb_randinit.py  datasets_hitsberted.py  datasets_tsfeatured.R  print_alldatasets.py  print_dataset.py  raw_datasets.py  ucr_stats.py  umap_classes.py  umap_forward.py
experiments/datasets/: data_information.py
experiments/datasets_pretraining/: convert_data.py  data_bound.py  data_grouped.py  data_information.py  data_joint.py  data_shuffled.py
experiments/pretraining/: .steps_training_log.txt  .steps_training_log2.txt  .training_log.txt  dataset.py  deepspeed_config.json  deepspeed_config1.json  deepspeed_config2.json  pretraining.py  train.py  training_test.py  utils.py
experiments/pretraining/data/: ETTh1_masks.pt  ETTh1_solutions.pt
experiments/pretraining/stats/: acc_stats.py  time_stats.py
experiments/training/: grid_search.py  train.py
experiments/vocabulary/: splines_experiment.py  vocab_performance.py  vocabulary_experiments.py
experiments/vocabulary/uniformwords/: stats_50k_vs_50kv2.py  (+3 more)
hitsbe/: __init__.py  example.py  hitsbe.py  main.py  vocabulary.py
hitsbe/models/: hitsBERT.py
tests/: test_hitsbe.py  test_vocabulary.py
(+25 files in other folders)
