[tool.poetry]
name = "hitsbe"
version = "0.1.0"
description = ""
authors = ["Angel <e.angelolm@go.ugr.es>"]
readme = "README.md"
packages = [
    { include = "hitsbe" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.21.0"
transformers = "^4.48.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
aeon = "^1.0.0"
pywavelets = "^1.8.0"
scipy = ">=1.9.0,<1.15.0"
torchviz = "^0.0.3"
graphviz = "^0.20.3"
datasetsforecast = "^1.0.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
